# mechatrek-bevy

./: .gitignore  Cargo.toml  Makefile  README.md  release.sh
.github/workflows/: docker.yaml
android/: settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/dev/mechatrek/bevy_app/: MainActivity.java
garage/scraps/: README.md  bevy-quick-start.md
web/: index.html
