[package]
name = "mechatrek-bevy"
version = "0.0.1"
edition = "2024"

[dependencies]
bevy = "0.16.1"
log = "0.4.29"

[features]
wayland = ["bevy/wayland"]
dev = ["bevy-dev", "log-max"]
bevy-dev = ["bevy/dynamic_linking"]
log-max = ["log/max_level_debug", "log/release_max_level_warn"]

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

# Enable more optimization in the release profile at the cost of compile time.
[profile.release]
# Strip all symbols and debugging information from the binary to slightly reduce file size.
# strip = "debuginfo"
strip = true
panic = "abort"

[profile.release-lto]
# Default to release profile values.
inherits = "release"
# Compile the entire crate as one unit.
# Slows compile times, marginal improvements.
codegen-units = 1
# Do a second optimization pass over the entire program, including dependencies.
# Slows compile times, marginal improvements.
lto = true

# Optimize for size in the wasm-release profile to reduce load times and bandwidth usage on web.
[profile.wasm-release]
# Default to release-lto profile values.
inherits = "release-lto"
# Optimize with size in mind (also try "z", sometimes it is better).
# Slightly slows compile times, great improvements to file size and runtime performance.
opt-level = "s"

# Optimize for size in the mobile-release profile to reduce apk.
[profile.mobile-release]
# Default to release-lto profile values.
inherits = "release-lto"
# Optimize with size in mind.
# Slightly slows compile times, great improvements to file size and runtime performance.
opt-level = "z"

[lib]
name = "mechatrek_bevy"
crate-type = ["lib", "cdylib"]
